// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-44grm2-StyledRow {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

<div
    class="cache-44grm2-StyledRow e1fm7frr0"
  >
    <div>
      First col
    </div>
    <div>
      Second col
    </div>
  </div>
</DocumentFragment>
`;

exports[`Row renders correctly with specific align 1`] = `
<DocumentFragment>
  .cache-8ky2pv-StyledRow {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

<div
    class="cache-8ky2pv-StyledRow e1fm7frr0"
  >
    <div>
      First col
    </div>
    <div>
      Second col
    </div>
  </div>
</DocumentFragment>
`;

exports[`Row renders correctly with specific gap 1`] = `
<DocumentFragment>
  .cache-e1vx3b-StyledRow {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 8px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

<div
    class="cache-e1vx3b-StyledRow e1fm7frr0"
  >
    <div>
      First col
    </div>
    <div>
      Second col
    </div>
  </div>
</DocumentFragment>
`;
